--- a/PicSimu.css
+++ b/PicSimu.css
@@ -10,7 +10,7 @@ table{
     position: static;
     float: left;
     width: 50%;
-    height: 100%;
+    height: 550px;
     overflow: scroll;
 
 }
