--- a/PicSimu.css
+++ b/PicSimu.css
@@ -5,7 +5,21 @@ body {
 table{
     font-size: small;
 }
-
+pre{
+    display: block;
+    font-family: monospace;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color: red;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+}
 .codeanzeige{
     position: static;
     float: left;
@@ -26,7 +40,4 @@ table{
 .cpu{
     position:relative;
     float: left;
-}
-.select{
-    ;
 }
