--- a/PicSimu.css
+++ b/PicSimu.css
@@ -4,6 +4,7 @@ body {
 }
 table{
     font-size: small;
+    width: 25%;
 }
 pre{
     display: block;
@@ -31,7 +32,7 @@ pre{
 .ram{
     float: left;
     position: relative;
-    width: 50%;
+
 }
 
 .buttons{
@@ -40,4 +41,21 @@ pre{
 .cpu{
     position:relative;
     float: left;
+}
+
+.fileUpload {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+}
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
 }
