--- a/PicSimu.css
+++ b/PicSimu.css
@@ -1,24 +1,8 @@
 body {
     font-family: sans-serif;
-    background-color: Moccasin ;
 }
 table{
     font-size: small;
-    width: 25%;
-}
-pre{
-    display: block;
-    font-family: monospace;
-    padding: 9.5px;
-    margin: 0 0 10px;
-    font-size: 13px;
-    line-height: 1.42857143;
-    color: red;
-    word-break: break-all;
-    word-wrap: break-word;
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    border-radius: 4px;
 }
 
 .codeanzeige{
@@ -32,11 +16,13 @@ pre{
 .ram{
     float: left;
     position: relative;
+    width: 25%
 
 }
 
 .buttons{
     float: left;
+    width: 50%
 }
 .cpu{
     position:relative;
