--- a/PicSimu.css
+++ b/PicSimu.css
@@ -15,6 +15,10 @@ body {
     height: 500px;
     overflow: scroll;
 }
+#Speicherbereich {
+    text-align: center;
+    vertical-align: middle;
+}
 .highlighted{
     background-color: #1b6d85;
 }
